test/corpus/multi-lines.txt
==================
Multi-lines
==================

BEGIN:VCARD
VERSION:4.0
FN:Jane Smith
NOTE:This is a very long note that should be
 folded into a single line by the parser.
END:VCARD

---

(source_file
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value)))
