test/corpus/multi-values.txt
==================
Multi-values
==================

BEGIN:VCARD
VERSION:4.0
FN:Alex Johnson
EMAIL:alex.j@example.com,alex.johnson@work.com
END:VCARD

---

(source_file
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value)
        (property_value))
    (property
        (property_name)
        (property_value)))
