test/corpus/simple.txt
==================
Simple
==================

BEGIN:VCARD
VERSION:4.0
FN:John Doe
TEL:+1-555-123-4567
END:VCARD

---

(source_file
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value)))
