test/corpus/value-parts.txt
==================
Value parts
==================

BEGIN:VCARD
VERSION:4.0
FN:Michael Jones
N:Jones;Michael;David;;
END:VCARD

---

(source_file
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value))
    (property
        (property_name)
        (property_value)))
